# k4Reco

./: CMakeLists.txt
doc/: ReleaseNotes.md
k4Reco/: CMakeLists.txt
k4Reco/ConformalTracking/: README.md
k4Reco/ConformalTracking/components/: ConformalTracking.cpp  ConformalTracking.h
k4Reco/ConformalTracking/include/: Cell.h  GaudiDDKalTest.h  GaudiDDKalTestTrack.h  GaudiTrkUtils.h  HelixTrack.h  KDCluster.h  KDTrack.h  KDTree.h  Parameters.h  kdtree2.h
k4Reco/ConformalTracking/options/: runConformalTracking.py
k4Reco/ConformalTracking/scripts/: compare-tracks.py
k4Reco/ConformalTracking/src/: GaudiDDKalTest.cpp  GaudiDDKalTestTrack.cpp  GaudiTrkUtils.cpp  HelixTrack.cpp  KDTrack.cpp  KDTree.cpp  kdtree2.cpp
k4Reco/DDPlanarDigi/: README.md
k4Reco/DDPlanarDigi/components/: DDPlanarDigi.cpp  DDPlanarDigi.h  DDPlanarDigiProcessor.cpp  DDPlanarDigiProcessor.h
k4Reco/DDPlanarDigi/options/: runDDPlanarDigi.py  runDDPlanarDigiProcessor.py
k4Reco/FastJet/include/: EClusterMode.h  FastJetAlg.hxx
k4Reco/FastJet/options/: marlinPandoraPlusFastJet.py  pandoraPlusFastJet.py
k4Reco/FastJet/scripts/: compareJets.py
k4Reco/FastJet/src/: FastJetAlg.cpp
k4Reco/GaudiLumiCalClusterer/: README.md
k4Reco/GaudiLumiCalClusterer/components/: GaudiLumiCalClusterer.cpp
k4Reco/GaudiLumiCalClusterer/include/: GaudiLumiCalClusterer.h  Global.h  GlobalMethodsClass.h  LCCluster.h  LumiCalClusterer.h  LumiCalHit.h  ProjectionInfo.h  SortingFunctions.h  SuperTrueClusterWeights.h  VirtualCluster.h
k4Reco/GaudiLumiCalClusterer/options/: runGaudiLumiCalClusterer.py  runGaudiLumiCalClustering.py
k4Reco/GaudiLumiCalClusterer/scripts/: compare-lumical.py
k4Reco/GaudiLumiCalClusterer/src/: GlobalMethodsClass.cpp  LCCluster.cpp  LumiCalClusterer.cpp  LumiCalClusterer_auxiliary.cpp  LumiCalClusterer_buildClusters.cpp  LumiCalClusterer_buildClusters_auxiliary.cpp  LumiCalClusterer_clusterMerger.cpp  LumiCalClusterer_energyCorrections.cpp  LumiCalClusterer_fiducialVolumeCuts.cpp  LumiCalClusterer_getCalHits.cpp  ProjectionInfo.cpp  SuperTrueClusterWeights.cpp  VirtualCluster.cpp
k4Reco/GaudiTrkUtils/: README.md
k4Reco/GaudiTrkUtils/include/: GaudiDDKalTest.h  GaudiDDKalTestTrack.h
k4Reco/GaudiTrkUtils/src/: GaudiDDKalTest.cpp  GaudiDDKalTestTrack.cpp
k4Reco/Overlay/components/: OverlayTiming.cpp  OverlayTiming.h  OverlayTimingRandomMix.cpp
k4Reco/Overlay/options/: runOverlayTiming.py
k4Reco/Tracking/: README.md
k4Reco/Tracking/include/: ClonesAndSplitTracksFinder.h  RefitFinal.h  TruthTrackFinder.h
k4Reco/Tracking/options/: runClonesAndSplitTracksFinder.py  runRefitFinal.py  runTruthTrackFinder.py
k4Reco/Tracking/src/: ClonesAndSplitTracksFinder.cpp  RefitFinal.cpp  TruthTrackFinder.cpp
python/: CMakeLists.txt
python/FastJet/: __init__.py  pandoraSettings.py
python/conformal_tracking_utils/: __init__.py  utils.py
test/: CMakeLists.txt
